docs: update link to local development

--- a/content/docs/quickstart.mdx
+++ b/content/docs/quickstart.mdx
@@ -10,7 +10,7 @@ description: Get started with Carbon in minutes
 
 ### Creating an API Key
 
-To use the API, you need to sign up on [Carbon](https://app.carbon.ms) and get an API key. You can also run Carbon locally by following the [self-hosting guide](/self-hosting).
+To use the API, you need to sign up on [Carbon](https://app.carbon.ms) and get an API key. You can also run Carbon locally by following the [README](https://github.com/crbnos/carbon?tab=readme-ov-file#development).
 
 1. Sign up at [app.carbon.ms](https://app.carbon.ms)
 2. Navigate to [Settings > API Keys](https://app.carbon.ms/x/settings/api-keys)
