docs: fix broken concepts link

--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -51,7 +51,7 @@ Ready to build your vertically integrated manufacturing system? [Sign up](https:
   />
   <IconCard
     title="Concepts"
-    href="/concepts"
+    href="/concepts/overview"
     description="Learn the core concepts of Carbon"
     icon={<BookOpen className="size-4" />}
   />
